# lurk

./: .gitignore  PRIVACY.md  README.md  install.sh  package.json
daemon/: Package.swift
extension/: background.js  collector.js  content.css  content.js  (+4 more)
lurk/: pyproject.toml
lurk/src/lurk/: __init__.py
lurk/src/lurk/cli/: main.py
lurk/src/lurk/config/: __init__.py  connect.py  exclusions.py  install.py  retention.py  settings.py
lurk/src/lurk/context/: agents.py  artifacts.py  decisions.py  identity.py  model.py  project.py  session.py  snapshot.py  stakeholders.py  workflows.py  workstreams.py
lurk/src/lurk/enrichment/: agent_detector.py  classifier.py  domain_intent.py  intent.py  pipeline.py
lurk/src/lurk/llm/: __init__.py  config.py  enhanced_intent.py  enhanced_prompt.py  provider.py  session_summary.py  synthesis.py  workstream_engine.py
lurk/src/lurk/observers/: __init__.py  ai_chat_observer.py  base.py  git_watcher.py  screenshot_observer.py  session_watcher.py
lurk/src/lurk/parsers/: __init__.py  adobe_creative.py  arc.py  base.py  chrome.py  discord.py  document_ocr.py  documents.py  fallback.py  figma.py  firefox.py  jetbrains.py  linear.py  mail.py  messaging.py  messaging_ocr.py  metrics.py  notion.py  registry.py  safari.py  sketch.py  slack.py  spatial.py  tableau.py  teams.py  terminal.py  test_fixtures.py  video_editors.py  vscode.py  xcode.py  zoom.py
lurk/src/lurk/sanitize/: title.py
lurk/src/lurk/server/: http.py  mcp.py  prompt.py
lurk/src/lurk/store/: database.py  schema.py  workstream_store.py
lurk/src/lurk/writer/: file_writer.py
lurk/src/lurk/writer/adapters/: claude_md.py  cursorrules.py  lurk_context.py
(+20 files in other folders)
