[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lurk"
version = "0.2.0"
description = "Context broker for AI tools — evolving workflow memory that follows you across agents"
requires-python = ">=3.11"
license = "MIT"
keywords = ["ai", "context", "mcp", "workflow", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]
http = ["uvicorn>=0.27", "starlette>=0.36"]
llm = ["httpx>=0.27"]
all = ["lurk[mcp,http,llm]"]

[project.scripts]
lurk = "lurk.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lurk"]
